traces/bug_439.txt
examples++-load/mmg3d-v4.0.cpp:440: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/mmg3d-v4.0.cpp:440:1: initialization of callDoLoadInit
438.   #define  WITH_NO_INIT
439.   #include "msh3.hpp" 
440. > LOADFUNC(Load_Init)

examples++-load/mmg3d-v4.0.cpp:440:1: call to DoLoadInit
438.   #define  WITH_NO_INIT
439.   #include "msh3.hpp" 
440. > LOADFUNC(Load_Init)

examples++-load/mmg3d-v4.0.cpp:440:1: call to addInitFunct
  438.   #define  WITH_NO_INIT
  439.   #include "msh3.hpp" 
  440. > LOADFUNC(Load_Init)

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
